# jarvis-cognitive-memory

./: .gitignore  CLAUDE.md  Dockerfile  JARVIS-EXPLAINER.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
hooks/: auto_commit_memory.py  post-commit
src/jarvis/: __init__.py  config.py  server.py
src/jarvis/cognitive/: confidence.py  consolidation.py  forgetting.py  ontology.py  priming.py
src/jarvis/extraction/: extractor.py  ollama_client.py  prompts.py
src/jarvis/ingestion/: git.py
src/jarvis/migration/: claude_memory.py
src/jarvis/models/: __init__.py  entity.py  memory.py  retrieval.py
src/jarvis/store/: memory_store.py  sqlite_store.py  vector_store.py
src/jarvis/web/: app.py  main.py
src/jarvis/web/templates/: base.html  dashboard.html  memories.html  memory_detail.html
tests/: test_cognitive.py  test_store.py
