[project]
name = "jarvis-cognitive-memory"
version = "0.1.0"
description = "Cognitive Developer Memory System — a brain-inspired MCP server with Ebbinghaus forgetting curves, dual-process retrieval, and developer memory ontology"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.12.0",
    "lancedb>=0.20.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pyarrow>=18.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "jinja2>=3.1.0",
]

[project.scripts]
jarvis = "jarvis.server:main"
jarvis-ui = "jarvis.web.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
